--- a/spec/fixtures/vcr_cassettes/BackendFacade/_create_character/creates_a_character_with_the_passed_in_argument_info_and_returns_Character.yml
+++ b/spec/fixtures/vcr_cassettes/BackendFacade/_create_character/creates_a_character_with_the_passed_in_argument_info_and_returns_Character.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: http://localhost:3000/api/v1/characters
+    uri: https://first-mate-be-1f1d4528b074.herokuapp.com/api/v1/characters
     body:
       encoding: UTF-8
       string: '{"character":{"name":"Character Name","dnd_race":"Human","dnd_class":"Bard","user_id":1,"picture_url":null}}'
@@ -20,6 +20,18 @@ http_interactions:
       code: 201
       message: Created
     headers:
+      Server:
+      - Cowboy
+      Date:
+      - Thu, 06 Jun 2024 16:45:33 GMT
+      Report-To:
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717692332&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=gBuLaXyEXI6wIrAe2hAjK5W0phLwh5Bfy0zDmL4dvlA%3D"}]}'
+      Reporting-Endpoints:
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717692332&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=gBuLaXyEXI6wIrAe2hAjK5W0phLwh5Bfy0zDmL4dvlA%3D
+      Nel:
+      - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
+      Connection:
+      - keep-alive
       X-Frame-Options:
       - SAMEORIGIN
       X-Xss-Protection:
@@ -35,22 +47,22 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-      - W/"db206386e1a2e4518df215a5ac0e13b0"
+      - W/"a1aa0bf9d1eead771c2c19c22a1ecc11"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - '008679fc-9c65-423e-9d70-577b47599212'
+      - 237442af-a2a3-486e-a408-b357737a61e2
       X-Runtime:
-      - '0.434254'
-      Server-Timing:
-      - start_processing.action_controller;dur=0.01, unpermitted_parameters.action_controller;dur=0.00,
-        sql.active_record;dur=32.62, instantiation.active_record;dur=5.78, transaction.active_record;dur=33.46,
-        process_action.action_controller;dur=140.70
+      - '2.378303'
+      Strict-Transport-Security:
+      - max-age=63072000; includeSubDomains
       Content-Length:
-      - '256'
+      - '257'
+      Via:
+      - 1.1 vegur
     body:
       encoding: UTF-8
-      string: '{"data":{"id":"3","type":"character","attributes":{"name":"Character
+      string: '{"data":{"id":"34","type":"character","attributes":{"name":"Character
         Name","user_id":1,"dnd_race":"Human","dnd_class":"Bard","image_url":null},"relationships":{"user":{"data":{"id":"1","type":"user"}},"user_campaigns":{"data":[]},"campaigns":{"data":[]}}}}'
-  recorded_at: Wed, 05 Jun 2024 07:24:05 GMT
+  recorded_at: Thu, 06 Jun 2024 16:45:34 GMT
 recorded_with: VCR 6.2.0
