--- a/spec/fixtures/vcr_cassettes/Characters_New_Page/is_a_form_to_create_a_new_character.yml
+++ b/spec/fixtures/vcr_cassettes/Characters_New_Page/is_a_form_to_create_a_new_character.yml
@@ -21,9 +21,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717559253&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=herXUjfxlrZMDjKkDn4s%2FQlj9FjlGlasLvB97IcVJeQ%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717692347&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Qe7HMN18%2BFj1JTy8R4Ys3Exi080%2FgtwzjEQSDfZr13c%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717559253&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=herXUjfxlrZMDjKkDn4s%2FQlj9FjlGlasLvB97IcVJeQ%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717692347&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Qe7HMN18%2BFj1JTy8R4Ys3Exi080%2FgtwzjEQSDfZr13c%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -37,9 +37,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Wed, 05 Jun 2024 03:47:33 GMT
+      - Thu, 06 Jun 2024 16:45:47 GMT
       X-Ratelimit-Reset:
-      - '1717559255'
+      - '1717692349'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -51,7 +51,7 @@ http_interactions:
     body:
       encoding: UTF-8
       string: '{"count":12,"results":[{"index":"barbarian","name":"Barbarian","url":"/api/classes/barbarian"},{"index":"bard","name":"Bard","url":"/api/classes/bard"},{"index":"cleric","name":"Cleric","url":"/api/classes/cleric"},{"index":"druid","name":"Druid","url":"/api/classes/druid"},{"index":"fighter","name":"Fighter","url":"/api/classes/fighter"},{"index":"monk","name":"Monk","url":"/api/classes/monk"},{"index":"paladin","name":"Paladin","url":"/api/classes/paladin"},{"index":"ranger","name":"Ranger","url":"/api/classes/ranger"},{"index":"rogue","name":"Rogue","url":"/api/classes/rogue"},{"index":"sorcerer","name":"Sorcerer","url":"/api/classes/sorcerer"},{"index":"warlock","name":"Warlock","url":"/api/classes/warlock"},{"index":"wizard","name":"Wizard","url":"/api/classes/wizard"}]}'
-  recorded_at: Wed, 05 Jun 2024 03:47:33 GMT
+  recorded_at: Thu, 06 Jun 2024 16:45:47 GMT
 - request:
     method: get
     uri: https://www.dnd5eapi.co/api/races
@@ -73,9 +73,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717559253&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=herXUjfxlrZMDjKkDn4s%2FQlj9FjlGlasLvB97IcVJeQ%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717692348&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=%2Fs%2FcJB0yMWYkrTpsBIAWuYrIXmyDLgJgI7F4UKO2nes%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717559253&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=herXUjfxlrZMDjKkDn4s%2FQlj9FjlGlasLvB97IcVJeQ%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717692348&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=%2Fs%2FcJB0yMWYkrTpsBIAWuYrIXmyDLgJgI7F4UKO2nes%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -89,9 +89,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Wed, 05 Jun 2024 03:47:33 GMT
+      - Thu, 06 Jun 2024 16:45:48 GMT
       X-Ratelimit-Reset:
-      - '1717559255'
+      - '1717692350'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -103,5 +103,5 @@ http_interactions:
     body:
       encoding: UTF-8
       string: '{"count":9,"results":[{"index":"dragonborn","name":"Dragonborn","url":"/api/races/dragonborn"},{"index":"dwarf","name":"Dwarf","url":"/api/races/dwarf"},{"index":"elf","name":"Elf","url":"/api/races/elf"},{"index":"gnome","name":"Gnome","url":"/api/races/gnome"},{"index":"half-elf","name":"Half-Elf","url":"/api/races/half-elf"},{"index":"half-orc","name":"Half-Orc","url":"/api/races/half-orc"},{"index":"halfling","name":"Halfling","url":"/api/races/halfling"},{"index":"human","name":"Human","url":"/api/races/human"},{"index":"tiefling","name":"Tiefling","url":"/api/races/tiefling"}]}'
-  recorded_at: Wed, 05 Jun 2024 03:47:33 GMT
+  recorded_at: Thu, 06 Jun 2024 16:45:48 GMT
 recorded_with: VCR 6.2.0
