--- a/spec/fixtures/vcr_cassettes/BackendFacade/_item/can_get_item_info.yml
+++ b/spec/fixtures/vcr_cassettes/BackendFacade/_item/can_get_item_info.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/api/v1/items/1
+    uri: https://first-mate-be-1f1d4528b074.herokuapp.com/api/v1/items/1
     body:
       encoding: US-ASCII
       string: ''
@@ -20,6 +20,18 @@ http_interactions:
       code: 200
       message: OK
     headers:
+      Server:
+      - Cowboy
+      Date:
+      - Thu, 06 Jun 2024 16:56:25 GMT
+      Report-To:
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717692985&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Wjx6%2F7VIZTGUb%2F8wo74tC3QVaGjJeLC1kFRiiISE3ds%3D"}]}'
+      Reporting-Endpoints:
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717692985&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Wjx6%2F7VIZTGUb%2F8wo74tC3QVaGjJeLC1kFRiiISE3ds%3D
+      Nel:
+      - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
+      Connection:
+      - keep-alive
       X-Frame-Options:
       - SAMEORIGIN
       X-Xss-Protection:
@@ -35,20 +47,21 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-      - W/"c277ec3a106cf5b9c4c1bd4f646f1a8b"
+      - W/"cd74489c1730fd140ffbcc2a96df7d9d"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 6f72a8d7-2079-4c79-8a60-61e55224a4f9
+      - d9f88443-19de-46c2-8ddb-18d3d90fd481
       X-Runtime:
-      - '0.038752'
-      Server-Timing:
-      - start_processing.action_controller;dur=0.00, sql.active_record;dur=0.68, instantiation.active_record;dur=0.41,
-        process_action.action_controller;dur=18.55
+      - '0.007472'
+      Strict-Transport-Security:
+      - max-age=63072000; includeSubDomains
       Content-Length:
-      - '431'
+      - '826'
+      Via:
+      - 1.1 vegur
     body:
       encoding: UTF-8
-      string: '{"data":{"id":"1","type":"item","attributes":{"name":"Light armor","animal_products_cost":1,"cloth_cost":0,"farmed_goods_cost":0,"food_cost":0,"foraged_goods_cost":0,"metal_cost":1,"stone_cost":0,"wood_cost":0,"monster_parts_cost":0},"relationships":{"campaign_items":{"data":[{"id":"1","type":"campaign_item"},{"id":"28","type":"campaign_item"}]},"campaigns":{"data":[{"id":"1","type":"campaign"},{"id":"2","type":"campaign"}]}}}}'
-  recorded_at: Wed, 05 Jun 2024 07:29:07 GMT
+      string: '{"data":{"id":"1","type":"item","attributes":{"name":"Light armor","animal_products_cost":1,"cloth_cost":0,"farmed_goods_cost":0,"food_cost":0,"foraged_goods_cost":0,"metal_cost":1,"stone_cost":0,"wood_cost":0,"monster_parts_cost":0},"relationships":{"campaign_items":{"data":[{"id":"1","type":"campaign_item"},{"id":"34","type":"campaign_item"},{"id":"61","type":"campaign_item"},{"id":"88","type":"campaign_item"},{"id":"115","type":"campaign_item"},{"id":"142","type":"campaign_item"},{"id":"169","type":"campaign_item"},{"id":"196","type":"campaign_item"}]},"campaigns":{"data":[{"id":"1","type":"campaign"},{"id":"34","type":"campaign"},{"id":"35","type":"campaign"},{"id":"36","type":"campaign"},{"id":"37","type":"campaign"},{"id":"38","type":"campaign"},{"id":"39","type":"campaign"},{"id":"40","type":"campaign"}]}}}}'
+  recorded_at: Thu, 06 Jun 2024 16:56:25 GMT
 recorded_with: VCR 6.2.0
