--- a/spec/fixtures/vcr_cassettes/BackendFacade/can_get_user_info.yml
+++ b/spec/fixtures/vcr_cassettes/BackendFacade/can_get_user_info.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/api/v1/users/1234567890
+    uri: https://first-mate-be-1f1d4528b074.herokuapp.com/api/v1/users/1234567890
     body:
       encoding: UTF-8
       string: '{"user":{"username":"testuser123","token":"1234asdf"}}'
@@ -20,6 +20,18 @@ http_interactions:
       code: 200
       message: OK
     headers:
+      Server:
+      - Cowboy
+      Date:
+      - Thu, 06 Jun 2024 16:55:51 GMT
+      Report-To:
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717692945&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=REsZAtpbkQNdrgci3k%2B%2Byn6CtV14FdjKMuuAslVy5eI%3D"}]}'
+      Reporting-Endpoints:
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717692945&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=REsZAtpbkQNdrgci3k%2B%2Byn6CtV14FdjKMuuAslVy5eI%3D
+      Nel:
+      - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
+      Connection:
+      - keep-alive
       X-Frame-Options:
       - SAMEORIGIN
       X-Xss-Protection:
@@ -35,20 +47,21 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-      - W/"77850edcabce84c1bafe1c8be408f8cf"
+      - W/"a145b58d25724b25d43f33b6053e712f"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - a3761533-ae3c-4a16-970b-624c97b518a4
+      - 1407705f-62ef-440b-aa3b-6560670c7dd8
       X-Runtime:
-      - '0.052970'
-      Server-Timing:
-      - start_processing.action_controller;dur=0.01, sql.active_record;dur=7.30, instantiation.active_record;dur=0.27,
-        transaction.active_record;dur=5.39, process_action.action_controller;dur=40.74
+      - '6.191134'
+      Strict-Transport-Security:
+      - max-age=63072000; includeSubDomains
       Content-Length:
-      - '207'
+      - '209'
+      Via:
+      - 1.1 vegur
     body:
       encoding: UTF-8
-      string: '{"data":{"id":"1","type":"user","attributes":{"uid":"1234567890","username":"testuser123","token":"1234asdf"},"relationships":{"user_campaigns":{"data":[]},"campaigns":{"data":[]},"characters":{"data":[]}}}}'
-  recorded_at: Wed, 05 Jun 2024 04:14:18 GMT
+      string: '{"data":{"id":"100","type":"user","attributes":{"uid":"1234567890","username":"testuser123","token":"1234asdf"},"relationships":{"user_campaigns":{"data":[]},"campaigns":{"data":[]},"characters":{"data":[]}}}}'
+  recorded_at: Thu, 06 Jun 2024 16:55:52 GMT
 recorded_with: VCR 6.2.0
