--- a/spec/fixtures/vcr_cassettes/BackendFacade/_get_user_campaigns/returns_an_array_of_all_UserCampaign_objects_that_a_user_has.yml
+++ b/spec/fixtures/vcr_cassettes/BackendFacade/_get_user_campaigns/returns_an_array_of_all_UserCampaign_objects_that_a_user_has.yml
@@ -1,11 +1,11 @@
 ---
 http_interactions:
 - request:
-    method: post
-    uri: https://first-mate-be-1f1d4528b074.herokuapp.com/api/v1/characters
+    method: get
+    uri: https://first-mate-be-1f1d4528b074.herokuapp.com/api/v1/users/1/user_campaigns
     body:
-      encoding: UTF-8
-      string: '{"character":{"name":"Character Name","dnd_race":"Human","dnd_class":"Bard","user_id":1,"picture_url":null}}'
+      encoding: US-ASCII
+      string: ''
     headers:
       Content-Type:
       - application/json
@@ -17,17 +17,17 @@ http_interactions:
       - "*/*"
   response:
     status:
-      code: 201
-      message: Created
+      code: 200
+      message: OK
     headers:
       Server:
       - Cowboy
       Date:
-      - Thu, 06 Jun 2024 18:18:04 GMT
+      - Thu, 06 Jun 2024 18:18:34 GMT
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717697885&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=zLnulDd8JifsY6TnMTXeQQvKFir6%2F9PnxwL5B77y9WQ%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717697915&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=lHNcsbZQme4YgIO6nFZCyyGphgqLj2JBNpKfcsIKxZw%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717697885&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=zLnulDd8JifsY6TnMTXeQQvKFir6%2F9PnxwL5B77y9WQ%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717697915&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=lHNcsbZQme4YgIO6nFZCyyGphgqLj2JBNpKfcsIKxZw%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -47,22 +47,21 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-      - W/"355a47cd4213c5aacfa0848c07596272"
+      - W/"dd3c1a7c4dde7d05fdc1e7eb68af1d39"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - d8352e51-e297-4992-bc70-20933c069319
+      - 1343c80c-15b0-45d3-b010-74592e54b47f
       X-Runtime:
-      - '0.050747'
+      - '0.015530'
       Strict-Transport-Security:
       - max-age=63072000; includeSubDomains
       Content-Length:
-      - '257'
+      - '205'
       Via:
       - 1.1 vegur
     body:
       encoding: UTF-8
-      string: '{"data":{"id":"37","type":"character","attributes":{"name":"Character
-        Name","user_id":1,"dnd_race":"Human","dnd_class":"Bard","image_url":null},"relationships":{"user":{"data":{"id":"1","type":"user"}},"user_campaigns":{"data":[]},"campaigns":{"data":[]}}}}'
-  recorded_at: Thu, 06 Jun 2024 18:18:05 GMT
+      string: '{"data":[{"id":"1","type":"user_campaign","attributes":{"role":"dm"},"relationships":{"user":{"data":{"id":"1","type":"user"}},"campaign":{"data":{"id":"1","type":"campaign"}},"character":{"data":null}}}]}'
+  recorded_at: Thu, 06 Jun 2024 18:18:35 GMT
 recorded_with: VCR 6.2.0
