--- a/spec/fixtures/vcr_cassettes/BackendService/can_hit_back_end_endpoint_-_items.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/can_hit_back_end_endpoint_-_items.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/api/v1/items/1
+    uri: https://first-mate-be-1f1d4528b074.herokuapp.com/api/v1/items/1
     body:
       encoding: US-ASCII
       string: ''
@@ -20,6 +20,18 @@ http_interactions:
       code: 200
       message: OK
     headers:
+      Server:
+      - Cowboy
+      Date:
+      - Thu, 06 Jun 2024 18:18:49 GMT
+      Report-To:
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717697929&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=aTqrLEs6464UoPDJxa0Pti6o%2Flr54Um2Uw3oz%2BKtfNw%3D"}]}'
+      Reporting-Endpoints:
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717697929&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=aTqrLEs6464UoPDJxa0Pti6o%2Flr54Um2Uw3oz%2BKtfNw%3D
+      Nel:
+      - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
+      Connection:
+      - keep-alive
       X-Frame-Options:
       - SAMEORIGIN
       X-Xss-Protection:
@@ -35,20 +47,21 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-      - W/"982e0c8e9a91d27b86acbf80b41cc4bb"
+      - W/"edb23b55e073a18d053b0debdfbd32ab"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 844b139d-ecd0-4d86-bf07-3a9b4d8809af
+      - 83dd89ef-1514-4cda-9e44-0ceee87047cc
       X-Runtime:
-      - '0.037494'
-      Server-Timing:
-      - start_processing.action_controller;dur=0.01, sql.active_record;dur=1.07, instantiation.active_record;dur=0.29,
-        process_action.action_controller;dur=19.00
+      - '0.025203'
+      Strict-Transport-Security:
+      - max-age=63072000; includeSubDomains
       Content-Length:
-      - '306'
+      - '1024'
+      Via:
+      - 1.1 vegur
     body:
       encoding: UTF-8
-      string: '{"data":{"id":"1","type":"item","attributes":{"name":"Light armor","animal_products_cost":1,"cloth_cost":0,"farmed_goods_cost":0,"food_cost":0,"foraged_goods_cost":0,"metal_cost":1,"stone_cost":0,"wood_cost":0,"monster_parts_cost":0},"relationships":{"campaign_items":{"data":[]},"campaigns":{"data":[]}}}}'
-  recorded_at: Wed, 05 Jun 2024 03:50:46 GMT
+      string: '{"data":{"id":"1","type":"item","attributes":{"name":"Light armor","animal_products_cost":1,"cloth_cost":0,"farmed_goods_cost":0,"food_cost":0,"foraged_goods_cost":0,"metal_cost":1,"stone_cost":0,"wood_cost":0,"monster_parts_cost":0},"relationships":{"campaign_items":{"data":[{"id":"1","type":"campaign_item"},{"id":"34","type":"campaign_item"},{"id":"61","type":"campaign_item"},{"id":"88","type":"campaign_item"},{"id":"115","type":"campaign_item"},{"id":"142","type":"campaign_item"},{"id":"169","type":"campaign_item"},{"id":"196","type":"campaign_item"},{"id":"223","type":"campaign_item"},{"id":"250","type":"campaign_item"},{"id":"277","type":"campaign_item"}]},"campaigns":{"data":[{"id":"1","type":"campaign"},{"id":"34","type":"campaign"},{"id":"35","type":"campaign"},{"id":"36","type":"campaign"},{"id":"37","type":"campaign"},{"id":"38","type":"campaign"},{"id":"39","type":"campaign"},{"id":"40","type":"campaign"},{"id":"41","type":"campaign"},{"id":"42","type":"campaign"},{"id":"43","type":"campaign"}]}}}}'
+  recorded_at: Thu, 06 Jun 2024 18:18:49 GMT
 recorded_with: VCR 6.2.0
