--- a/spec/fixtures/vcr_cassettes/User/_party_campaigns/returns_all_of_a_users_user_campaigns_where_they_are_a_party_member.yml
+++ b/spec/fixtures/vcr_cassettes/User/_party_campaigns/returns_all_of_a_users_user_campaigns_where_they_are_a_party_member.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://first-mate-be-1f1d4528b074.herokuapp.com/api/v1/users/1/user_campaigns
+    uri: https://first-mate-be-1f1d4528b074.herokuapp.com/api/v1/users/2/user_campaigns
     body:
       encoding: US-ASCII
       string: ''
@@ -23,11 +23,11 @@ http_interactions:
       Server:
       - Cowboy
       Date:
-      - Thu, 06 Jun 2024 16:43:56 GMT
+      - Thu, 06 Jun 2024 18:37:13 GMT
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717692235&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=2diYSdpSaELEORumnW7Hy47yp2FOwxAzCPXKOM%2BBKro%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717699033&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=m1KwjE5dvY9suH7PeAPvLCKnXhQjHiUJH%2Fiej8KHqIo%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717692235&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=2diYSdpSaELEORumnW7Hy47yp2FOwxAzCPXKOM%2BBKro%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717699033&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=m1KwjE5dvY9suH7PeAPvLCKnXhQjHiUJH%2Fiej8KHqIo%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -47,21 +47,21 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-      - W/"dd3c1a7c4dde7d05fdc1e7eb68af1d39"
+      - W/"929693851a70c2af2f0bbea2827f5672"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - c31da5db-f716-4e0c-95e4-d74ed0c4aa76
+      - 76cd3220-47e4-45e5-ab56-b87179e09d58
       X-Runtime:
-      - '1.168831'
+      - '0.024355'
       Strict-Transport-Security:
       - max-age=63072000; includeSubDomains
       Content-Length:
-      - '205'
+      - '240'
       Via:
       - 1.1 vegur
     body:
       encoding: UTF-8
-      string: '{"data":[{"id":"1","type":"user_campaign","attributes":{"role":"dm"},"relationships":{"user":{"data":{"id":"1","type":"user"}},"campaign":{"data":{"id":"1","type":"campaign"}},"character":{"data":null}}}]}'
-  recorded_at: Thu, 06 Jun 2024 16:43:56 GMT
+      string: '{"data":[{"id":"2","type":"user_campaign","attributes":{"role":"party_member"},"relationships":{"user":{"data":{"id":"2","type":"user"}},"campaign":{"data":{"id":"1","type":"campaign"}},"character":{"data":{"id":"1","type":"character"}}}}]}'
+  recorded_at: Thu, 06 Jun 2024 18:37:13 GMT
 recorded_with: VCR 6.2.0
