--- a/spec/fixtures/vcr_cassettes/BackendFacade/_create_campaign/creates_a_new_campaign_with_the_argument_campaign_name_and_returns_a_Campaign.yml
+++ b/spec/fixtures/vcr_cassettes/BackendFacade/_create_campaign/creates_a_new_campaign_with_the_argument_campaign_name_and_returns_a_Campaign.yml
@@ -23,11 +23,11 @@ http_interactions:
       Server:
       - Cowboy
       Date:
-      - Thu, 06 Jun 2024 17:11:20 GMT
+      - Thu, 06 Jun 2024 21:55:17 GMT
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717693874&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=4R5SR0bEHxlUI3qrkSD%2FByT26W28OoCwusrA4RfMV9o%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717710917&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=gHFG6So5OpQPvlzlmpIbbuqcAYWCMYt5ChvlbafUF%2Bg%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717693874&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=4R5SR0bEHxlUI3qrkSD%2FByT26W28OoCwusrA4RfMV9o%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717710917&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=gHFG6So5OpQPvlzlmpIbbuqcAYWCMYt5ChvlbafUF%2Bg%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -47,13 +47,13 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-      - W/"55d5f039b945529fc83aab2b6d04ac4d"
+      - W/"133548ab093d70a6c7f5ebf43d7d2e89"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - e6fe9033-cb5c-43f1-b6a3-e5d65f0e6953
+      - 24e7b41f-c9d0-416b-b01c-b5e2988a8cb5
       X-Runtime:
-      - '6.032205'
+      - '0.308287'
       Strict-Transport-Security:
       - max-age=63072000; includeSubDomains
       Content-Length:
@@ -62,6 +62,6 @@ http_interactions:
       - 1.1 vegur
     body:
       encoding: UTF-8
-      string: '{"data":{"id":"41","type":"campaign","attributes":{"name":"Random Name","week":0,"animal_products":0,"cloth":0,"farmed_goods":0,"food":0,"foraged_goods":0,"metal":0,"monster_parts":0,"stone":0,"wood":0,"villagers":120},"relationships":{"user_campaigns":{"data":[]},"users":{"data":[]},"characters":{"data":[]},"campaign_items":{"data":[{"id":"223","type":"campaign_item"},{"id":"224","type":"campaign_item"},{"id":"225","type":"campaign_item"},{"id":"226","type":"campaign_item"},{"id":"227","type":"campaign_item"},{"id":"228","type":"campaign_item"},{"id":"229","type":"campaign_item"},{"id":"230","type":"campaign_item"},{"id":"231","type":"campaign_item"},{"id":"232","type":"campaign_item"},{"id":"233","type":"campaign_item"},{"id":"234","type":"campaign_item"},{"id":"235","type":"campaign_item"},{"id":"236","type":"campaign_item"},{"id":"237","type":"campaign_item"},{"id":"238","type":"campaign_item"},{"id":"239","type":"campaign_item"},{"id":"240","type":"campaign_item"},{"id":"241","type":"campaign_item"},{"id":"242","type":"campaign_item"},{"id":"243","type":"campaign_item"},{"id":"244","type":"campaign_item"},{"id":"245","type":"campaign_item"},{"id":"246","type":"campaign_item"},{"id":"247","type":"campaign_item"},{"id":"248","type":"campaign_item"},{"id":"249","type":"campaign_item"}]},"items":{"data":[{"id":"1","type":"item"},{"id":"2","type":"item"},{"id":"3","type":"item"},{"id":"4","type":"item"},{"id":"5","type":"item"},{"id":"6","type":"item"},{"id":"7","type":"item"},{"id":"8","type":"item"},{"id":"9","type":"item"},{"id":"10","type":"item"},{"id":"11","type":"item"},{"id":"12","type":"item"},{"id":"13","type":"item"},{"id":"14","type":"item"},{"id":"15","type":"item"},{"id":"16","type":"item"},{"id":"17","type":"item"},{"id":"18","type":"item"},{"id":"19","type":"item"},{"id":"20","type":"item"},{"id":"21","type":"item"},{"id":"22","type":"item"},{"id":"23","type":"item"},{"id":"24","type":"item"},{"id":"25","type":"item"},{"id":"26","type":"item"},{"id":"27","type":"item"}]}}}}'
-  recorded_at: Thu, 06 Jun 2024 17:11:20 GMT
+      string: '{"data":{"id":"49","type":"campaign","attributes":{"name":"Random Name","week":0,"animal_products":0,"cloth":0,"farmed_goods":0,"food":0,"foraged_goods":0,"metal":0,"monster_parts":0,"stone":0,"wood":0,"villagers":120},"relationships":{"user_campaigns":{"data":[]},"users":{"data":[]},"characters":{"data":[]},"campaign_items":{"data":[{"id":"439","type":"campaign_item"},{"id":"440","type":"campaign_item"},{"id":"441","type":"campaign_item"},{"id":"442","type":"campaign_item"},{"id":"443","type":"campaign_item"},{"id":"444","type":"campaign_item"},{"id":"445","type":"campaign_item"},{"id":"446","type":"campaign_item"},{"id":"447","type":"campaign_item"},{"id":"448","type":"campaign_item"},{"id":"449","type":"campaign_item"},{"id":"450","type":"campaign_item"},{"id":"451","type":"campaign_item"},{"id":"452","type":"campaign_item"},{"id":"453","type":"campaign_item"},{"id":"454","type":"campaign_item"},{"id":"455","type":"campaign_item"},{"id":"456","type":"campaign_item"},{"id":"457","type":"campaign_item"},{"id":"458","type":"campaign_item"},{"id":"459","type":"campaign_item"},{"id":"460","type":"campaign_item"},{"id":"461","type":"campaign_item"},{"id":"462","type":"campaign_item"},{"id":"463","type":"campaign_item"},{"id":"464","type":"campaign_item"},{"id":"465","type":"campaign_item"}]},"items":{"data":[{"id":"1","type":"item"},{"id":"2","type":"item"},{"id":"3","type":"item"},{"id":"4","type":"item"},{"id":"5","type":"item"},{"id":"6","type":"item"},{"id":"7","type":"item"},{"id":"8","type":"item"},{"id":"9","type":"item"},{"id":"10","type":"item"},{"id":"11","type":"item"},{"id":"12","type":"item"},{"id":"13","type":"item"},{"id":"14","type":"item"},{"id":"15","type":"item"},{"id":"16","type":"item"},{"id":"17","type":"item"},{"id":"18","type":"item"},{"id":"19","type":"item"},{"id":"20","type":"item"},{"id":"21","type":"item"},{"id":"22","type":"item"},{"id":"23","type":"item"},{"id":"24","type":"item"},{"id":"25","type":"item"},{"id":"26","type":"item"},{"id":"27","type":"item"}]}}}}'
+  recorded_at: Thu, 06 Jun 2024 21:55:18 GMT
 recorded_with: VCR 6.2.0
