--- a/spec/fixtures/vcr_cassettes/BackendFacade/_create_character/creates_a_character_with_the_passed_in_argument_info_and_returns_Character.yml
+++ b/spec/fixtures/vcr_cassettes/BackendFacade/_create_character/creates_a_character_with_the_passed_in_argument_info_and_returns_Character.yml
@@ -23,11 +23,11 @@ http_interactions:
       Server:
       - Cowboy
       Date:
-      - Thu, 06 Jun 2024 17:11:14 GMT
+      - Thu, 06 Jun 2024 21:55:16 GMT
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717693874&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=4R5SR0bEHxlUI3qrkSD%2FByT26W28OoCwusrA4RfMV9o%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717710916&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=nyFCIRXRX9lPW8hLKA2NSKPwwE0aBCZOjxLn9%2BCksnI%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717693874&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=4R5SR0bEHxlUI3qrkSD%2FByT26W28OoCwusrA4RfMV9o%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717710916&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=nyFCIRXRX9lPW8hLKA2NSKPwwE0aBCZOjxLn9%2BCksnI%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -47,13 +47,13 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-      - W/"80f6a9dbf1d440556ca4ca16bb476099"
+      - W/"089e4bb19f15cd0af6d74dd202ac43ec"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - cd18c571-ffbc-44da-be4a-77d34026e439
+      - 58ad439c-8aac-4279-8ed1-34d78bba6b74
       X-Runtime:
-      - '0.054026'
+      - '0.144716'
       Strict-Transport-Security:
       - max-age=63072000; includeSubDomains
       Content-Length:
@@ -62,7 +62,7 @@ http_interactions:
       - 1.1 vegur
     body:
       encoding: UTF-8
-      string: '{"data":{"id":"36","type":"character","attributes":{"name":"Character
+      string: '{"data":{"id":"42","type":"character","attributes":{"name":"Character
         Name","user_id":1,"dnd_race":"Human","dnd_class":"Bard","image_url":null},"relationships":{"user":{"data":{"id":"1","type":"user"}},"user_campaigns":{"data":[]},"campaigns":{"data":[]}}}}'
-  recorded_at: Thu, 06 Jun 2024 17:11:14 GMT
+  recorded_at: Thu, 06 Jun 2024 21:55:16 GMT
 recorded_with: VCR 6.2.0
