--- a/spec/fixtures/vcr_cassettes/BackendService/can_make_a_call_for_users.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/can_make_a_call_for_users.yml
@@ -2,10 +2,10 @@
 http_interactions:
 - request:
     method: get
-    uri: https://first-mate-be-1f1d4528b074.herokuapp.com/api/v1/users/1234567890
+    uri: https://first-mate-be-1f1d4528b074.herokuapp.com/api/v1/users/1
     body:
       encoding: UTF-8
-      string: '{"user":{"username":"testuser123","token":"1234asdf"}}'
+      string: '{"user":{"username":"bob","token":"example"}}'
     headers:
       Content-Type:
       - application/json
@@ -23,11 +23,11 @@ http_interactions:
       Server:
       - Cowboy
       Date:
-      - Thu, 06 Jun 2024 21:55:15 GMT
+      - Thu, 06 Jun 2024 21:20:42 GMT
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717710915&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=mDdpx2%2FQtmKZDktzDwE8F%2FopOZGD8w6dp%2Fu7O6e3eXk%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717708843&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=mJdADpKrdPuNL2J88PMbMy4GNyUgCzGu2N6lNFgqlQ4%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717710915&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=mDdpx2%2FQtmKZDktzDwE8F%2FopOZGD8w6dp%2Fu7O6e3eXk%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717708843&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=mJdADpKrdPuNL2J88PMbMy4GNyUgCzGu2N6lNFgqlQ4%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -47,21 +47,21 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-      - W/"a145b58d25724b25d43f33b6053e712f"
+      - W/"735c280070d95cab7de33314dafb38c4"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - ad418085-a1f2-4562-9c40-950df1c43df0
+      - 3f2cae5d-e112-4713-ba55-8fc972f8f573
       X-Runtime:
-      - '0.082472'
+      - '0.063137'
       Strict-Transport-Security:
       - max-age=63072000; includeSubDomains
       Content-Length:
-      - '209'
+      - '191'
       Via:
       - 1.1 vegur
     body:
       encoding: UTF-8
-      string: '{"data":{"id":"100","type":"user","attributes":{"uid":"1234567890","username":"testuser123","token":"1234asdf"},"relationships":{"user_campaigns":{"data":[]},"campaigns":{"data":[]},"characters":{"data":[]}}}}'
-  recorded_at: Thu, 06 Jun 2024 21:55:15 GMT
+      string: '{"data":{"id":"102","type":"user","attributes":{"uid":"1","username":"bob","token":"example"},"relationships":{"user_campaigns":{"data":[]},"campaigns":{"data":[]},"characters":{"data":[]}}}}'
+  recorded_at: Thu, 06 Jun 2024 21:20:43 GMT
 recorded_with: VCR 6.2.0
