--- a/spec/fixtures/vcr_cassettes/BackendService/can_return_all_characters_from_a_campaign_and_their_attributes.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/can_return_all_characters_from_a_campaign_and_their_attributes.yml
@@ -23,11 +23,11 @@ http_interactions:
       Server:
       - Cowboy
       Date:
-      - Thu, 06 Jun 2024 17:13:03 GMT
+      - Thu, 06 Jun 2024 21:09:22 GMT
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717693983&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=CMZMNcXZuUfoHfQKro7plZAiiyc%2B9NHwNdrlBijZlt0%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717708163&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=BpzNkWS2DucUGERKcMB92Ey4LhN7CtPqvLPm6nurXvw%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717693983&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=CMZMNcXZuUfoHfQKro7plZAiiyc%2B9NHwNdrlBijZlt0%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717708163&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=BpzNkWS2DucUGERKcMB92Ey4LhN7CtPqvLPm6nurXvw%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -51,9 +51,9 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - e39bc7ed-34f8-48b5-bca6-72c88223fe11
+      - 715a5543-b674-445f-ba96-9c9970e09167
       X-Runtime:
-      - '0.108784'
+      - '0.010208'
       Strict-Transport-Security:
       - max-age=63072000; includeSubDomains
       Content-Length:
@@ -65,5 +65,5 @@ http_interactions:
       string: '{"data":[{"id":"1","type":"character","attributes":{"name":"Test Character
         1","user_id":2,"dnd_race":"Dragonborn","dnd_class":"Barbarian","image_url":null},"relationships":{"user":{"data":{"id":"2","type":"user"}},"user_campaigns":{"data":[{"id":"2","type":"user_campaign"}]},"campaigns":{"data":[{"id":"1","type":"campaign"}]}}},{"id":"2","type":"character","attributes":{"name":"Test
         Character 2","user_id":3,"dnd_race":"Human","dnd_class":"Bard","image_url":null},"relationships":{"user":{"data":{"id":"3","type":"user"}},"user_campaigns":{"data":[{"id":"3","type":"user_campaign"}]},"campaigns":{"data":[{"id":"1","type":"campaign"}]}}}]}'
-  recorded_at: Thu, 06 Jun 2024 17:13:03 GMT
+  recorded_at: Thu, 06 Jun 2024 21:09:23 GMT
 recorded_with: VCR 6.2.0
