--- a/spec/fixtures/vcr_cassettes/BackendFacade/_create_campaign/creates_a_new_campaign_with_the_argument_campaign_name_and_returns_a_Campaign.yml
+++ b/spec/fixtures/vcr_cassettes/BackendFacade/_create_campaign/creates_a_new_campaign_with_the_argument_campaign_name_and_returns_a_Campaign.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: https://first-mate-be-1f1d4528b074.herokuapp.com/api/v1/campaigns
+    uri: http://localhost:3000/api/v1/campaigns
     body:
       encoding: UTF-8
       string: '{"campaign":{"name":"Random Name"}}'
@@ -20,18 +20,6 @@ http_interactions:
       code: 201
       message: Created
     headers:
-      Server:
-      - Cowboy
-      Date:
-      - Thu, 06 Jun 2024 18:18:05 GMT
-      Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717697885&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=zLnulDd8JifsY6TnMTXeQQvKFir6%2F9PnxwL5B77y9WQ%3D"}]}'
-      Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717697885&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=zLnulDd8JifsY6TnMTXeQQvKFir6%2F9PnxwL5B77y9WQ%3D
-      Nel:
-      - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
-      Connection:
-      - keep-alive
       X-Frame-Options:
       - SAMEORIGIN
       X-Xss-Protection:
@@ -47,21 +35,20 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-      - W/"51c439328312696fc8bb2124a544e65f"
+      - W/"99096ca71df014c52861b35b79429a09"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - cc1c9e53-fd15-41e3-947a-e9d18da1bc22
+      - fdf24f71-99bf-41f9-be3b-bf5465d5b32d
       X-Runtime:
-      - '0.176291'
-      Strict-Transport-Security:
-      - max-age=63072000; includeSubDomains
+      - '0.043879'
+      Server-Timing:
+      - start_processing.action_controller;dur=0.00, sql.active_record;dur=7.18, instantiation.active_record;dur=0.46,
+        transaction.active_record;dur=31.02, process_action.action_controller;dur=38.02
       Content-Length:
-      - '2024'
-      Via:
-      - 1.1 vegur
+      - '2023'
     body:
       encoding: UTF-8
-      string: '{"data":{"id":"43","type":"campaign","attributes":{"name":"Random Name","week":0,"animal_products":0,"cloth":0,"farmed_goods":0,"food":0,"foraged_goods":0,"metal":0,"monster_parts":0,"stone":0,"wood":0,"villagers":120},"relationships":{"user_campaigns":{"data":[]},"users":{"data":[]},"characters":{"data":[]},"campaign_items":{"data":[{"id":"277","type":"campaign_item"},{"id":"278","type":"campaign_item"},{"id":"279","type":"campaign_item"},{"id":"280","type":"campaign_item"},{"id":"281","type":"campaign_item"},{"id":"282","type":"campaign_item"},{"id":"283","type":"campaign_item"},{"id":"284","type":"campaign_item"},{"id":"285","type":"campaign_item"},{"id":"286","type":"campaign_item"},{"id":"287","type":"campaign_item"},{"id":"288","type":"campaign_item"},{"id":"289","type":"campaign_item"},{"id":"290","type":"campaign_item"},{"id":"291","type":"campaign_item"},{"id":"292","type":"campaign_item"},{"id":"293","type":"campaign_item"},{"id":"294","type":"campaign_item"},{"id":"295","type":"campaign_item"},{"id":"296","type":"campaign_item"},{"id":"297","type":"campaign_item"},{"id":"298","type":"campaign_item"},{"id":"299","type":"campaign_item"},{"id":"300","type":"campaign_item"},{"id":"301","type":"campaign_item"},{"id":"302","type":"campaign_item"},{"id":"303","type":"campaign_item"}]},"items":{"data":[{"id":"1","type":"item"},{"id":"2","type":"item"},{"id":"3","type":"item"},{"id":"4","type":"item"},{"id":"5","type":"item"},{"id":"6","type":"item"},{"id":"7","type":"item"},{"id":"8","type":"item"},{"id":"9","type":"item"},{"id":"10","type":"item"},{"id":"11","type":"item"},{"id":"12","type":"item"},{"id":"13","type":"item"},{"id":"14","type":"item"},{"id":"15","type":"item"},{"id":"16","type":"item"},{"id":"17","type":"item"},{"id":"18","type":"item"},{"id":"19","type":"item"},{"id":"20","type":"item"},{"id":"21","type":"item"},{"id":"22","type":"item"},{"id":"23","type":"item"},{"id":"24","type":"item"},{"id":"25","type":"item"},{"id":"26","type":"item"},{"id":"27","type":"item"}]}}}}'
-  recorded_at: Thu, 06 Jun 2024 18:18:05 GMT
+      string: '{"data":{"id":"5","type":"campaign","attributes":{"name":"Random Name","week":0,"animal_products":0,"cloth":0,"farmed_goods":0,"food":0,"foraged_goods":0,"metal":0,"monster_parts":0,"stone":0,"wood":0,"villagers":120},"relationships":{"user_campaigns":{"data":[]},"users":{"data":[]},"characters":{"data":[]},"campaign_items":{"data":[{"id":"109","type":"campaign_item"},{"id":"110","type":"campaign_item"},{"id":"111","type":"campaign_item"},{"id":"112","type":"campaign_item"},{"id":"113","type":"campaign_item"},{"id":"114","type":"campaign_item"},{"id":"115","type":"campaign_item"},{"id":"116","type":"campaign_item"},{"id":"117","type":"campaign_item"},{"id":"118","type":"campaign_item"},{"id":"119","type":"campaign_item"},{"id":"120","type":"campaign_item"},{"id":"121","type":"campaign_item"},{"id":"122","type":"campaign_item"},{"id":"123","type":"campaign_item"},{"id":"124","type":"campaign_item"},{"id":"125","type":"campaign_item"},{"id":"126","type":"campaign_item"},{"id":"127","type":"campaign_item"},{"id":"128","type":"campaign_item"},{"id":"129","type":"campaign_item"},{"id":"130","type":"campaign_item"},{"id":"131","type":"campaign_item"},{"id":"132","type":"campaign_item"},{"id":"133","type":"campaign_item"},{"id":"134","type":"campaign_item"},{"id":"135","type":"campaign_item"}]},"items":{"data":[{"id":"1","type":"item"},{"id":"2","type":"item"},{"id":"3","type":"item"},{"id":"4","type":"item"},{"id":"5","type":"item"},{"id":"6","type":"item"},{"id":"7","type":"item"},{"id":"8","type":"item"},{"id":"9","type":"item"},{"id":"10","type":"item"},{"id":"11","type":"item"},{"id":"12","type":"item"},{"id":"13","type":"item"},{"id":"14","type":"item"},{"id":"15","type":"item"},{"id":"16","type":"item"},{"id":"17","type":"item"},{"id":"18","type":"item"},{"id":"19","type":"item"},{"id":"20","type":"item"},{"id":"21","type":"item"},{"id":"22","type":"item"},{"id":"23","type":"item"},{"id":"24","type":"item"},{"id":"25","type":"item"},{"id":"26","type":"item"},{"id":"27","type":"item"}]}}}}'
+  recorded_at: Fri, 07 Jun 2024 00:11:58 GMT
 recorded_with: VCR 6.2.0
