--- a/spec/fixtures/vcr_cassettes/BackendFacade/_item/can_get_item_info.yml
+++ b/spec/fixtures/vcr_cassettes/BackendFacade/_item/can_get_item_info.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://first-mate-be-1f1d4528b074.herokuapp.com/api/v1/items/1
+    uri: http://localhost:3000/api/v1/items/1
     body:
       encoding: US-ASCII
       string: ''
@@ -20,18 +20,6 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Cowboy
-      Date:
-      - Thu, 06 Jun 2024 18:18:34 GMT
-      Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717697914&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=GVsrMk8H97tUY2r%2BIIwyxqPK5X8eW5kwfTnG5i%2B6%2F6w%3D"}]}'
-      Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717697914&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=GVsrMk8H97tUY2r%2BIIwyxqPK5X8eW5kwfTnG5i%2B6%2F6w%3D
-      Nel:
-      - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
-      Connection:
-      - keep-alive
       X-Frame-Options:
       - SAMEORIGIN
       X-Xss-Protection:
@@ -47,21 +35,20 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-      - W/"edb23b55e073a18d053b0debdfbd32ab"
+      - W/"94a6917a0ae24833d86053d888cdc904"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - f98739d2-b820-435b-92cb-9a38173c85e4
+      - 476812f0-0a10-4967-ad66-df101fc10f9d
       X-Runtime:
-      - '0.021895'
-      Strict-Transport-Security:
-      - max-age=63072000; includeSubDomains
+      - '0.006555'
+      Server-Timing:
+      - start_processing.action_controller;dur=0.00, sql.active_record;dur=0.39, instantiation.active_record;dur=0.04,
+        process_action.action_controller;dur=1.92
       Content-Length:
-      - '1024'
-      Via:
-      - 1.1 vegur
+      - '624'
     body:
       encoding: UTF-8
-      string: '{"data":{"id":"1","type":"item","attributes":{"name":"Light armor","animal_products_cost":1,"cloth_cost":0,"farmed_goods_cost":0,"food_cost":0,"foraged_goods_cost":0,"metal_cost":1,"stone_cost":0,"wood_cost":0,"monster_parts_cost":0},"relationships":{"campaign_items":{"data":[{"id":"1","type":"campaign_item"},{"id":"34","type":"campaign_item"},{"id":"61","type":"campaign_item"},{"id":"88","type":"campaign_item"},{"id":"115","type":"campaign_item"},{"id":"142","type":"campaign_item"},{"id":"169","type":"campaign_item"},{"id":"196","type":"campaign_item"},{"id":"223","type":"campaign_item"},{"id":"250","type":"campaign_item"},{"id":"277","type":"campaign_item"}]},"campaigns":{"data":[{"id":"1","type":"campaign"},{"id":"34","type":"campaign"},{"id":"35","type":"campaign"},{"id":"36","type":"campaign"},{"id":"37","type":"campaign"},{"id":"38","type":"campaign"},{"id":"39","type":"campaign"},{"id":"40","type":"campaign"},{"id":"41","type":"campaign"},{"id":"42","type":"campaign"},{"id":"43","type":"campaign"}]}}}}'
-  recorded_at: Thu, 06 Jun 2024 18:18:34 GMT
+      string: '{"data":{"id":"1","type":"item","attributes":{"name":"Light armor","animal_products_cost":1,"cloth_cost":0,"farmed_goods_cost":0,"food_cost":0,"foraged_goods_cost":0,"metal_cost":1,"stone_cost":0,"wood_cost":0,"monster_parts_cost":0},"relationships":{"campaign_items":{"data":[{"id":"1","type":"campaign_item"},{"id":"28","type":"campaign_item"},{"id":"55","type":"campaign_item"},{"id":"82","type":"campaign_item"},{"id":"109","type":"campaign_item"}]},"campaigns":{"data":[{"id":"1","type":"campaign"},{"id":"2","type":"campaign"},{"id":"3","type":"campaign"},{"id":"4","type":"campaign"},{"id":"5","type":"campaign"}]}}}}'
+  recorded_at: Fri, 07 Jun 2024 00:11:58 GMT
 recorded_with: VCR 6.2.0
