--- a/spec/fixtures/vcr_cassettes/BackendFacade/can_get_user_info.yml
+++ b/spec/fixtures/vcr_cassettes/BackendFacade/can_get_user_info.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://first-mate-be-1f1d4528b074.herokuapp.com/api/v1/users/1234567890
+    uri: http://localhost:3000/api/v1/users/1234567890
     body:
       encoding: UTF-8
       string: '{"user":{"username":"testuser123","token":"1234asdf"}}'
@@ -20,18 +20,6 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Cowboy
-      Date:
-      - Thu, 06 Jun 2024 18:17:56 GMT
-      Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717697868&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=7ujoI2XzBMyo%2BUJ4n6BBmUS5Vv1blWU7ASdgyJHFuxs%3D"}]}'
-      Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717697868&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=7ujoI2XzBMyo%2BUJ4n6BBmUS5Vv1blWU7ASdgyJHFuxs%3D
-      Nel:
-      - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
-      Connection:
-      - keep-alive
       X-Frame-Options:
       - SAMEORIGIN
       X-Xss-Protection:
@@ -47,21 +35,20 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-      - W/"a145b58d25724b25d43f33b6053e712f"
+      - W/"bdb81b01131846cfcf412902fe08deba"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 65ae65c1-5dac-4dbc-b366-a2b078f42f4b
+      - c92c771b-7b49-4496-b568-4ea07f11d412
       X-Runtime:
-      - '8.876655'
-      Strict-Transport-Security:
-      - max-age=63072000; includeSubDomains
+      - '0.069406'
+      Server-Timing:
+      - start_processing.action_controller;dur=0.01, sql.active_record;dur=5.01, transaction.active_record;dur=5.15,
+        process_action.action_controller;dur=33.35
       Content-Length:
-      - '209'
-      Via:
-      - 1.1 vegur
+      - '207'
     body:
       encoding: UTF-8
-      string: '{"data":{"id":"100","type":"user","attributes":{"uid":"1234567890","username":"testuser123","token":"1234asdf"},"relationships":{"user_campaigns":{"data":[]},"campaigns":{"data":[]},"characters":{"data":[]}}}}'
-  recorded_at: Thu, 06 Jun 2024 18:17:57 GMT
+      string: '{"data":{"id":"5","type":"user","attributes":{"uid":"1234567890","username":"testuser123","token":"1234asdf"},"relationships":{"user_campaigns":{"data":[]},"campaigns":{"data":[]},"characters":{"data":[]}}}}'
+  recorded_at: Fri, 07 Jun 2024 00:11:57 GMT
 recorded_with: VCR 6.2.0
