--- a/spec/fixtures/vcr_cassettes/BackendService/can_return_all_characters_from_a_campaign_and_their_attributes.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/can_return_all_characters_from_a_campaign_and_their_attributes.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://first-mate-be-1f1d4528b074.herokuapp.com/api/v1/campaigns/1/characters
+    uri: http://localhost:3000/api/v1/campaigns/1/characters
     body:
       encoding: US-ASCII
       string: ''
@@ -20,18 +20,6 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Cowboy
-      Date:
-      - Thu, 06 Jun 2024 17:13:03 GMT
-      Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717693983&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=CMZMNcXZuUfoHfQKro7plZAiiyc%2B9NHwNdrlBijZlt0%3D"}]}'
-      Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717693983&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=CMZMNcXZuUfoHfQKro7plZAiiyc%2B9NHwNdrlBijZlt0%3D
-      Nel:
-      - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
-      Connection:
-      - keep-alive
       X-Frame-Options:
       - SAMEORIGIN
       X-Xss-Protection:
@@ -47,23 +35,22 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-      - W/"1b25cd31a4dd2475c29bc7acb516f458"
+      - W/"0da45370a79082764b6582e7832f1e88"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - e39bc7ed-34f8-48b5-bca6-72c88223fe11
+      - abfc0ced-6534-49ae-aa14-bc90411d1680
       X-Runtime:
-      - '0.108784'
-      Strict-Transport-Security:
-      - max-age=63072000; includeSubDomains
+      - '0.014050'
+      Server-Timing:
+      - start_processing.action_controller;dur=0.00, sql.active_record;dur=1.71, instantiation.active_record;dur=0.07,
+        process_action.action_controller;dur=10.13
       Content-Length:
-      - '642'
-      Via:
-      - 1.1 vegur
+      - '1021'
     body:
       encoding: UTF-8
       string: '{"data":[{"id":"1","type":"character","attributes":{"name":"Test Character
-        1","user_id":2,"dnd_race":"Dragonborn","dnd_class":"Barbarian","image_url":null},"relationships":{"user":{"data":{"id":"2","type":"user"}},"user_campaigns":{"data":[{"id":"2","type":"user_campaign"}]},"campaigns":{"data":[{"id":"1","type":"campaign"}]}}},{"id":"2","type":"character","attributes":{"name":"Test
-        Character 2","user_id":3,"dnd_race":"Human","dnd_class":"Bard","image_url":null},"relationships":{"user":{"data":{"id":"3","type":"user"}},"user_campaigns":{"data":[{"id":"3","type":"user_campaign"}]},"campaigns":{"data":[{"id":"1","type":"campaign"}]}}}]}'
-  recorded_at: Thu, 06 Jun 2024 17:13:03 GMT
+        1","user_id":2,"dnd_race":"Dragonborn","dnd_class":"Barbarian","image_url":null,"character_image":null},"relationships":{"user":{"data":{"id":"2","type":"user"}},"user_campaigns":{"data":[{"id":"2","type":"user_campaign"}]},"campaigns":{"data":[{"id":"1","type":"campaign"}]}}},{"id":"2","type":"character","attributes":{"name":"Test
+        Character 2","user_id":3,"dnd_race":"Human","dnd_class":"Bard","image_url":null,"character_image":null},"relationships":{"user":{"data":{"id":"3","type":"user"}},"user_campaigns":{"data":[{"id":"3","type":"user_campaign"}]},"campaigns":{"data":[{"id":"1","type":"campaign"}]}}},{"id":"7","type":"character","attributes":{"name":"Tidus","user_id":4,"dnd_race":"Dragonborn","dnd_class":"Barbarian","image_url":null,"character_image":null},"relationships":{"user":{"data":{"id":"4","type":"user"}},"user_campaigns":{"data":[{"id":"4","type":"user_campaign"}]},"campaigns":{"data":[{"id":"1","type":"campaign"}]}}}]}'
+  recorded_at: Fri, 07 Jun 2024 00:12:01 GMT
 recorded_with: VCR 6.2.0
