--- a/spec/fixtures/vcr_cassettes/DndFacade/get_class_info.yml
+++ b/spec/fixtures/vcr_cassettes/DndFacade/get_class_info.yml
@@ -21,9 +21,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717697915&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=mCbi2txFAAdMVPLJzcieyJ%2FCxwuBYZSfQfnCFDBEIwQ%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717719118&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=%2B%2FiNZl9BolrdBLlJciEx%2B4CWamRJTzgxgjPq%2FyGr9eQ%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717697915&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=mCbi2txFAAdMVPLJzcieyJ%2FCxwuBYZSfQfnCFDBEIwQ%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717719118&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=%2B%2FiNZl9BolrdBLlJciEx%2B4CWamRJTzgxgjPq%2FyGr9eQ%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -37,9 +37,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Thu, 06 Jun 2024 18:18:35 GMT
+      - Fri, 07 Jun 2024 00:11:58 GMT
       X-Ratelimit-Reset:
-      - '1717697917'
+      - '1717719120'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -51,5 +51,57 @@ http_interactions:
     body:
       encoding: UTF-8
       string: '{"count":12,"results":[{"index":"barbarian","name":"Barbarian","url":"/api/classes/barbarian"},{"index":"bard","name":"Bard","url":"/api/classes/bard"},{"index":"cleric","name":"Cleric","url":"/api/classes/cleric"},{"index":"druid","name":"Druid","url":"/api/classes/druid"},{"index":"fighter","name":"Fighter","url":"/api/classes/fighter"},{"index":"monk","name":"Monk","url":"/api/classes/monk"},{"index":"paladin","name":"Paladin","url":"/api/classes/paladin"},{"index":"ranger","name":"Ranger","url":"/api/classes/ranger"},{"index":"rogue","name":"Rogue","url":"/api/classes/rogue"},{"index":"sorcerer","name":"Sorcerer","url":"/api/classes/sorcerer"},{"index":"warlock","name":"Warlock","url":"/api/classes/warlock"},{"index":"wizard","name":"Wizard","url":"/api/classes/wizard"}]}'
-  recorded_at: Thu, 06 Jun 2024 18:18:35 GMT
+  recorded_at: Fri, 07 Jun 2024 00:11:58 GMT
+- request:
+    method: get
+    uri: https://www.dnd5eapi.co/api/races
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v2.9.0
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Server:
+      - Cowboy
+      Report-To:
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717719119&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=QqgQNJXtYzo%2FxKQKNBrhtQl1GcwchYQImqQJZxdDh48%3D"}]}'
+      Reporting-Endpoints:
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717719119&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=QqgQNJXtYzo%2FxKQKNBrhtQl1GcwchYQImqQJZxdDh48%3D
+      Nel:
+      - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
+      Connection:
+      - keep-alive
+      X-Powered-By:
+      - Express
+      Access-Control-Allow-Origin:
+      - "*"
+      X-Ratelimit-Limit:
+      - '10000'
+      X-Ratelimit-Remaining:
+      - '9999'
+      Date:
+      - Fri, 07 Jun 2024 00:11:59 GMT
+      X-Ratelimit-Reset:
+      - '1717719121'
+      Content-Type:
+      - application/json; charset=utf-8
+      Content-Length:
+      - '590'
+      Etag:
+      - W/"24e-fLi04AT1A69TbfAKoLPP6Ek4DzE"
+      Via:
+      - 1.1 vegur
+    body:
+      encoding: UTF-8
+      string: '{"count":9,"results":[{"index":"dragonborn","name":"Dragonborn","url":"/api/races/dragonborn"},{"index":"dwarf","name":"Dwarf","url":"/api/races/dwarf"},{"index":"elf","name":"Elf","url":"/api/races/elf"},{"index":"gnome","name":"Gnome","url":"/api/races/gnome"},{"index":"half-elf","name":"Half-Elf","url":"/api/races/half-elf"},{"index":"half-orc","name":"Half-Orc","url":"/api/races/half-orc"},{"index":"halfling","name":"Halfling","url":"/api/races/halfling"},{"index":"human","name":"Human","url":"/api/races/human"},{"index":"tiefling","name":"Tiefling","url":"/api/races/tiefling"}]}'
+  recorded_at: Fri, 07 Jun 2024 00:11:59 GMT
 recorded_with: VCR 6.2.0
