--- a/spec/fixtures/vcr_cassettes/User/_party_campaigns/returns_all_of_a_users_user_campaigns_where_they_are_a_party_member.yml
+++ b/spec/fixtures/vcr_cassettes/User/_party_campaigns/returns_all_of_a_users_user_campaigns_where_they_are_a_party_member.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://first-mate-be-1f1d4528b074.herokuapp.com/api/v1/users/2/user_campaigns
+    uri: http://localhost:3000/api/v1/users/2/user_campaigns
     body:
       encoding: US-ASCII
       string: ''
@@ -20,18 +20,6 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Cowboy
-      Date:
-      - Thu, 06 Jun 2024 18:37:13 GMT
-      Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717699033&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=m1KwjE5dvY9suH7PeAPvLCKnXhQjHiUJH%2Fiej8KHqIo%3D"}]}'
-      Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717699033&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=m1KwjE5dvY9suH7PeAPvLCKnXhQjHiUJH%2Fiej8KHqIo%3D
-      Nel:
-      - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
-      Connection:
-      - keep-alive
       X-Frame-Options:
       - SAMEORIGIN
       X-Xss-Protection:
@@ -51,17 +39,16 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 76cd3220-47e4-45e5-ab56-b87179e09d58
+      - 25cf00c6-be66-4dcf-bb0e-f75a2538df4e
       X-Runtime:
-      - '0.024355'
-      Strict-Transport-Security:
-      - max-age=63072000; includeSubDomains
+      - '0.007397'
+      Server-Timing:
+      - start_processing.action_controller;dur=0.00, sql.active_record;dur=0.29, instantiation.active_record;dur=0.11,
+        process_action.action_controller;dur=2.04
       Content-Length:
       - '240'
-      Via:
-      - 1.1 vegur
     body:
       encoding: UTF-8
       string: '{"data":[{"id":"2","type":"user_campaign","attributes":{"role":"party_member"},"relationships":{"user":{"data":{"id":"2","type":"user"}},"campaign":{"data":{"id":"1","type":"campaign"}},"character":{"data":{"id":"1","type":"character"}}}}]}'
-  recorded_at: Thu, 06 Jun 2024 18:37:13 GMT
+  recorded_at: Fri, 07 Jun 2024 00:12:01 GMT
 recorded_with: VCR 6.2.0
