--- a/spec/fixtures/vcr_cassettes/User/_user_campaigns/returns_all_of_a_users_user_campaigns.yml
+++ b/spec/fixtures/vcr_cassettes/User/_user_campaigns/returns_all_of_a_users_user_campaigns.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://first-mate-be-1f1d4528b074.herokuapp.com/api/v1/users/1/user_campaigns
+    uri: http://localhost:3000/api/v1/users/1/user_campaigns
     body:
       encoding: US-ASCII
       string: ''
@@ -20,18 +20,6 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Cowboy
-      Date:
-      - Thu, 06 Jun 2024 18:26:00 GMT
-      Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717698353&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=NVI6QgQiVZdZmLhFqMR5M3szUle3MXRjkNZTO5B0odI%3D"}]}'
-      Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717698353&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=NVI6QgQiVZdZmLhFqMR5M3szUle3MXRjkNZTO5B0odI%3D
-      Nel:
-      - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
-      Connection:
-      - keep-alive
       X-Frame-Options:
       - SAMEORIGIN
       X-Xss-Protection:
@@ -51,81 +39,16 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 5c6151d7-407f-4aca-b0cf-1e9bdd1132f3
+      - b2d67c77-cd79-43f4-8df1-c06f79529aeb
       X-Runtime:
-      - '8.390283'
-      Strict-Transport-Security:
-      - max-age=63072000; includeSubDomains
+      - '0.022708'
+      Server-Timing:
+      - start_processing.action_controller;dur=0.01, sql.active_record;dur=0.41, instantiation.active_record;dur=0.24,
+        process_action.action_controller;dur=7.83
       Content-Length:
       - '205'
-      Via:
-      - 1.1 vegur
     body:
       encoding: UTF-8
       string: '{"data":[{"id":"1","type":"user_campaign","attributes":{"role":"dm"},"relationships":{"user":{"data":{"id":"1","type":"user"}},"campaign":{"data":{"id":"1","type":"campaign"}},"character":{"data":null}}}]}'
-  recorded_at: Thu, 06 Jun 2024 18:26:01 GMT
-- request:
-    method: get
-    uri: https://first-mate-be-1f1d4528b074.herokuapp.com/api/v1/users/1/user_campaigns
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Content-Type:
-      - application/json
-      User-Agent:
-      - Faraday v2.9.0
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Server:
-      - Cowboy
-      Date:
-      - Thu, 06 Jun 2024 18:26:22 GMT
-      Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717698373&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=8D1hUnas9yh6FFuGCpsXVMTnatG8vGYgDi1MUhYHO9I%3D"}]}'
-      Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717698373&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=8D1hUnas9yh6FFuGCpsXVMTnatG8vGYgDi1MUhYHO9I%3D
-      Nel:
-      - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
-      Connection:
-      - keep-alive
-      X-Frame-Options:
-      - SAMEORIGIN
-      X-Xss-Protection:
-      - '0'
-      X-Content-Type-Options:
-      - nosniff
-      X-Permitted-Cross-Domain-Policies:
-      - none
-      Referrer-Policy:
-      - strict-origin-when-cross-origin
-      Content-Type:
-      - application/json; charset=utf-8
-      Vary:
-      - Accept
-      Etag:
-      - W/"dd3c1a7c4dde7d05fdc1e7eb68af1d39"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - de3f1a8b-cd68-410f-a781-9ec5ae11f3bd
-      X-Runtime:
-      - '9.428889'
-      Strict-Transport-Security:
-      - max-age=63072000; includeSubDomains
-      Content-Length:
-      - '205'
-      Via:
-      - 1.1 vegur
-    body:
-      encoding: UTF-8
-      string: '{"data":[{"id":"1","type":"user_campaign","attributes":{"role":"dm"},"relationships":{"user":{"data":{"id":"1","type":"user"}},"campaign":{"data":{"id":"1","type":"campaign"}},"character":{"data":null}}}]}'
-  recorded_at: Thu, 06 Jun 2024 18:26:23 GMT
+  recorded_at: Fri, 07 Jun 2024 00:12:01 GMT
 recorded_with: VCR 6.2.0
