--- a/spec/fixtures/vcr_cassettes/Characters_Show_Page/it_displays_all_characters_in_your_party_along_with_their_name_class_race_and_image.yml
+++ b/spec/fixtures/vcr_cassettes/Characters_Show_Page/it_displays_all_characters_in_your_party_along_with_their_name_class_race_and_image.yml
@@ -21,9 +21,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717693895&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=fBiN6uBvfBcns7pRDWcZMtFcD%2Fvl9t%2BD5dKUFANqMR0%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717720884&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=EZJ10zEP9Mu2ywlcu%2FAvKwp21Q8tne3pq798payXfKI%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717693895&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=fBiN6uBvfBcns7pRDWcZMtFcD%2Fvl9t%2BD5dKUFANqMR0%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717720884&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=EZJ10zEP9Mu2ywlcu%2FAvKwp21Q8tne3pq798payXfKI%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -37,9 +37,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Thu, 06 Jun 2024 17:11:35 GMT
+      - Fri, 07 Jun 2024 00:41:24 GMT
       X-Ratelimit-Reset:
-      - '1717693897'
+      - '1717720886'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -51,7 +51,7 @@ http_interactions:
     body:
       encoding: UTF-8
       string: '{"count":12,"results":[{"index":"barbarian","name":"Barbarian","url":"/api/classes/barbarian"},{"index":"bard","name":"Bard","url":"/api/classes/bard"},{"index":"cleric","name":"Cleric","url":"/api/classes/cleric"},{"index":"druid","name":"Druid","url":"/api/classes/druid"},{"index":"fighter","name":"Fighter","url":"/api/classes/fighter"},{"index":"monk","name":"Monk","url":"/api/classes/monk"},{"index":"paladin","name":"Paladin","url":"/api/classes/paladin"},{"index":"ranger","name":"Ranger","url":"/api/classes/ranger"},{"index":"rogue","name":"Rogue","url":"/api/classes/rogue"},{"index":"sorcerer","name":"Sorcerer","url":"/api/classes/sorcerer"},{"index":"warlock","name":"Warlock","url":"/api/classes/warlock"},{"index":"wizard","name":"Wizard","url":"/api/classes/wizard"}]}'
-  recorded_at: Thu, 06 Jun 2024 17:11:35 GMT
+  recorded_at: Fri, 07 Jun 2024 00:41:24 GMT
 - request:
     method: get
     uri: https://www.dnd5eapi.co/api/races
@@ -73,9 +73,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717693895&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=fBiN6uBvfBcns7pRDWcZMtFcD%2Fvl9t%2BD5dKUFANqMR0%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717720885&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Gq2W%2BlsrN7yN08Q9VoyELZVief5rpu38UfH%2BbYNhilM%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717693895&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=fBiN6uBvfBcns7pRDWcZMtFcD%2Fvl9t%2BD5dKUFANqMR0%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717720885&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Gq2W%2BlsrN7yN08Q9VoyELZVief5rpu38UfH%2BbYNhilM%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -89,9 +89,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Thu, 06 Jun 2024 17:11:35 GMT
+      - Fri, 07 Jun 2024 00:41:25 GMT
       X-Ratelimit-Reset:
-      - '1717693897'
+      - '1717720887'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -103,5 +103,5 @@ http_interactions:
     body:
       encoding: UTF-8
       string: '{"count":9,"results":[{"index":"dragonborn","name":"Dragonborn","url":"/api/races/dragonborn"},{"index":"dwarf","name":"Dwarf","url":"/api/races/dwarf"},{"index":"elf","name":"Elf","url":"/api/races/elf"},{"index":"gnome","name":"Gnome","url":"/api/races/gnome"},{"index":"half-elf","name":"Half-Elf","url":"/api/races/half-elf"},{"index":"half-orc","name":"Half-Orc","url":"/api/races/half-orc"},{"index":"halfling","name":"Halfling","url":"/api/races/halfling"},{"index":"human","name":"Human","url":"/api/races/human"},{"index":"tiefling","name":"Tiefling","url":"/api/races/tiefling"}]}'
-  recorded_at: Thu, 06 Jun 2024 17:11:35 GMT
+  recorded_at: Fri, 07 Jun 2024 00:41:25 GMT
 recorded_with: VCR 6.2.0
