--- a/spec/fixtures/vcr_cassettes/DndService/can_call_the_api_and_return_a_list_of_races.yml
+++ b/spec/fixtures/vcr_cassettes/DndService/can_call_the_api_and_return_a_list_of_races.yml
@@ -21,9 +21,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717720886&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=UCuOglVmW%2FxIFo1jdgaosMljq2%2Fogwi1ZItl4djCeOM%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717721037&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=shQbI1QRzk4DZ6MgHULweTB3YM8Q2704oLN3Mb4Orng%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717720886&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=UCuOglVmW%2FxIFo1jdgaosMljq2%2Fogwi1ZItl4djCeOM%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1717721037&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=shQbI1QRzk4DZ6MgHULweTB3YM8Q2704oLN3Mb4Orng%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -37,9 +37,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Fri, 07 Jun 2024 00:41:26 GMT
+      - Fri, 07 Jun 2024 00:43:57 GMT
       X-Ratelimit-Reset:
-      - '1717720888'
+      - '1717721039'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -51,5 +51,5 @@ http_interactions:
     body:
       encoding: UTF-8
       string: '{"count":9,"results":[{"index":"dragonborn","name":"Dragonborn","url":"/api/races/dragonborn"},{"index":"dwarf","name":"Dwarf","url":"/api/races/dwarf"},{"index":"elf","name":"Elf","url":"/api/races/elf"},{"index":"gnome","name":"Gnome","url":"/api/races/gnome"},{"index":"half-elf","name":"Half-Elf","url":"/api/races/half-elf"},{"index":"half-orc","name":"Half-Orc","url":"/api/races/half-orc"},{"index":"halfling","name":"Halfling","url":"/api/races/halfling"},{"index":"human","name":"Human","url":"/api/races/human"},{"index":"tiefling","name":"Tiefling","url":"/api/races/tiefling"}]}'
-  recorded_at: Fri, 07 Jun 2024 00:41:26 GMT
+  recorded_at: Fri, 07 Jun 2024 00:43:57 GMT
 recorded_with: VCR 6.2.0
