--- a/spec/fixtures/vcr_cassettes/Party_Index_Page/has_all_information.yml
+++ b/spec/fixtures/vcr_cassettes/Party_Index_Page/has_all_information.yml
@@ -39,12 +39,12 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 598ab569-9463-468f-827a-a31f923e16ec
+      - 03bb005d-ea38-4869-b64a-32e61ffee4b2
       X-Runtime:
-      - '0.032874'
+      - '0.030637'
       Server-Timing:
-      - start_processing.action_controller;dur=0.00, sql.active_record;dur=9.27, instantiation.active_record;dur=5.57,
-        process_action.action_controller;dur=25.11
+      - start_processing.action_controller;dur=0.00, sql.active_record;dur=13.47,
+        instantiation.active_record;dur=0.34, process_action.action_controller;dur=21.28
       Content-Length:
       - '688'
     body:
@@ -52,5 +52,5 @@ http_interactions:
       string: '{"data":[{"id":"1","type":"character","attributes":{"name":"Test Character
         1","user_id":2,"dnd_race":"Dragonborn","dnd_class":"Barbarian","image_url":null,"character_image":null},"relationships":{"user":{"data":{"id":"2","type":"user"}},"user_campaigns":{"data":[{"id":"2","type":"user_campaign"}]},"campaigns":{"data":[{"id":"1","type":"campaign"}]}}},{"id":"2","type":"character","attributes":{"name":"Test
         Character 2","user_id":3,"dnd_race":"Human","dnd_class":"Bard","image_url":null,"character_image":null},"relationships":{"user":{"data":{"id":"3","type":"user"}},"user_campaigns":{"data":[{"id":"3","type":"user_campaign"}]},"campaigns":{"data":[{"id":"1","type":"campaign"}]}}}]}'
-  recorded_at: Fri, 07 Jun 2024 00:41:23 GMT
+  recorded_at: Fri, 07 Jun 2024 02:20:29 GMT
 recorded_with: VCR 6.2.0
